final/styles/far-far.css
:root {
    --clr-primary: #394a59;
    --clr-secondary: #dd4e1e;
    --clr-background: #fff;
    --clr-typeface: #121212;
    --font-heading: 'Goldman', 'Arial Bold', Arial, Helvetica, sans-serif;
    --font-body: 'Oxanium', 'Times New Roman', Times, serif;
}

/* Body style */
a {
    text-decoration: none;
    color: var(--clr-typeface);
}

body {
    font-family: var(--font-body);
    color: var(--clr-typeface);
    background-color: var(--clr-background);
}

h1,
h2,
h3,
#font-example {
    font-family: var(--font-heading);
}

h1,
h2,
h3 {
    text-align: center;
}

h1 {
    color: var(--clr-secondary);

    border: 4px solid var(--clr-secondary);
    border-radius: .5rem;

    margin: 0 auto;

    width: fit-content;
    padding: .1rem .3rem;
}

/* Header style */
header {
    color: var(--clr-background);
    background-color: var(--clr-primary);

    border-bottom: 1px solid var(--clr-typeface);

    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: .5rem 1rem;
}

.logo {
    display: flex;
    flex-direction: row;
    align-items: center;

    gap: .5rem;
}

.navigation a {
    padding: .1rem .3rem;

    color: var(--clr-primary);

    border: 2px solid transparent;
    border-radius: .5rem;
}

.navigation a:hover {
    border-left-color: var(--clr-primary);
    border-right-color: var(--clr-primary);
}

.navigation {
    display: flex;
    flex-direction: column;
    border: none;
    border-radius: .5rem;
    padding: 0;
}

.navigation ul {
    margin: 0;
    padding: .5rem 1rem;
    list-style: none;
}

.navigation.show {
    background-color: var(--clr-background);
    border: 2px solid var(--clr-secondary);

    position: absolute;
    right: 0;
    z-index: 10;
    margin-top: 100px;
    margin-right: 16px;
}

.navigation li {
    display: none;
    list-style: none;
    border: none;
}

.show li {
    display: block;
    text-align: left;

    padding: .2rem 0;
}

/* Hamburger menu styles */
#menu {
    display: block;
}

#menu::before {
    content: '≡';
    font-size: 2rem;
    font-weight: 700;
    line-height: 1;

    color: var(--clr-secondary);
    border: 2px solid var(--clr-secondary);
    border-radius: .5rem;

    width: 2.5rem;
    height: 2.5rem;

    display: inline-flex;
    align-items: center;
    justify-content: center;
}

#menu:hover:before {
    color: var(--clr-background);
    border-color: var(--clr-background);
}

#menu.show::before {
    content: '×';
}

/* Main style */
main {
    margin: 2rem 0;
}

main li {
    margin-bottom: .5rem;
}

h1+p {
    /* margin: 0 auto; */
    text-align: center;
    margin: 1rem auto;

    width: 90%;
}

#wireframe img {
    display: block;
    margin: .5rem auto;

    border: 1px solid var(--clr-typeface);

    width: 80%;
    max-width: 600px;
}

/* Card style */
.card-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: .5rem;

    margin: 0 1rem;
}

.card {
    border: 1px solid var(--clr-typeface);
    border-radius: 1rem;

    background-color: var(--clr-primary);
    color: var(--clr-background);

    text-align: center;

    padding-left: .5rem;
    padding-right: .5rem;
}

.card li {
    text-align: left;
}

/* Footer style */
footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;

    padding: .5rem 1rem;
    margin-top: 2rem;

    border-top: 3px solid var(--clr-secondary);

    width: 75%;
    max-width: 750px;

    margin: 0 auto;
}

.contact,
.social-media,
.copyright {
    width: fit-content;

    margin: 0 auto;
}

.social-media {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}

/* Color Scheme style */
#clr-prim,
#clr-sec,
#clr-back,
#clr-type {
    border: 2px solid var(--clr-typeface);
    border-radius: .5rem;

    padding: .1rem .3rem;
}

#clr-prim {
    background-color: var(--clr-primary);
    color: var(--clr-background);

    font-size: 24px;
}

#clr-sec {
    background-color: var(--clr-secondary);
    color: var(--clr-typeface);

    font-size: 24px;
}

#clr-back {
    background-color: var(--clr-background);
    color: var(--clr-typeface);

    font-size: 24px;
}

#clr-type {
    background-color: var(--clr-typeface);
    color: var(--clr-background);
    border-color: var(--clr-background);

    font-size: 24px;
}

